# kaleidoscope

./: .gitignore  KALEIDO_PUMP_TECHNICAL_MANUAL.md  README.md  pyproject.toml  requirements.txt
prompts/: impl-plan.prompt.md
tests/: conftest.py  test_s04_characteristics.py  test_s05_connection_state.py  test_s06_wire_conventions.py  test_s07_command_protocol.py  test_s08_write_operations.py  test_s09_read_operations.py  test_s10_notifications.py  test_s11_enumerations.py  test_s12_data_models.py  test_s13_alarm_system.py  test_s14_security.py  test_s16_unit_conversions.py
tests/helpers/: ble.py  codec.py  constants.py
