[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kaleido-test-suite"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10
pythonpath = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "sequence: marks tests as stateful ordered operational sequences",
]
